feat: added conditional release and required released to distinguish unreleased

--- a/data/nvidia/rtx-4060-ti-16gb.toml
+++ b/data/nvidia/rtx-4060-ti-16gb.toml
@@ -6,6 +6,8 @@ architecture = "Ada Lovelace"
 series = 40
 segment = "desktop"
 
+released = true
+
 vram_gb = 16
 vram_type = "GDDR6"
 memory_bus_bits = 128
