--- a/data/nvidia/rtx-4070-super.toml
+++ b/data/nvidia/rtx-4070-super.toml
@@ -6,6 +6,8 @@ architecture = "Ada Lovelace"
 series = 40
 segment = "desktop"
 
+released = true
+
 vram_gb = 12
 vram_type = "GDDR6X"
 memory_bus_bits = 192
