--- a/data/nvidia/rtx-4090.toml
+++ b/data/nvidia/rtx-4090.toml
@@ -6,6 +6,8 @@ architecture = "Ada Lovelace"
 series = 40
 segment = "desktop"
 
+released = true
+
 vram_gb = 24
 vram_type = "GDDR6X"
 memory_bus_bits = 384
